# scoped-agent-control

./: .gitignore  PUBLISH.md  README.md  pyproject.toml
.github/workflows/: publish-pypi.yml
examples/demo_repo/: README.md  assistant_prompt.txt  behavior.yaml
examples/demo_repo/.scoped-control/: config.yaml  index.json
src/scoped_control/: __init__.py  api.py  app.py  cleanup.py  cli.py  errors.py  models.py  setup_flow.py  setup_planner.py  triage.py
src/scoped_control.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/scoped_control/annotations/: __init__.py  inserter.py  parser.py  scanner.py  spans.py  (+1 more)
tests/integration/: test_annotate_cli.py  test_app_smoke.py  test_cleanup_cli.py  test_remote_triage_cli.py  test_setup_cli.py  test_wave2_index_fixture.py  test_wave2_scan_cli.py  test_wave3_tui_commands.py  test_wave4_query_cli.py  test_wave4_tui_query.py  test_wave5_edit_cli.py  test_wave5_tui_edit.py  test_wave6_remote_install.py  test_wave6_smoke.py  test_wave7_cli_setup_and_install.py
tests/unit/: test_annotation_cleanup.py  test_anthropic_executor.py  test_api.py  test_claude_code_installer.py  test_cli.py  test_config_loader.py  test_fastapi_scaffold.py  test_github_pr.py  test_resolver_synthesis.py  test_setup_planner.py  test_slack_bot_setup.py  test_slack_integration.py  test_slack_server.py  test_triage.py  test_wave2_fixtures.py  test_wave2_index_store.py  test_wave2_scanner.py  test_wave3_commands.py  test_wave4_executor_errors.py  test_wave4_query_resolution.py  test_wave6_github.py  test_wave7_slack.py
(+42 files in other folders)
