[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scoped-agent-control"
version = "0.2.0"
description = "Role-based, scoped AI query/edit operations for any codebase."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0.1",
  "textual>=0.85.2",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.39.0"]

[project.scripts]
scoped-control = "scoped_control.cli:main"

[dependency-groups]
dev = [
  "pytest>=9.0.0",
  "anthropic>=0.39.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
